--- a/assets/desktop.ini
+++ b/assets/desktop.ini
@@ -2,3 +2,4 @@
 Captura de pantalla 2024-07-30 180634.png=@Captura de pantalla 2024-07-30 180634,0
 Captura de pantalla 2024-07-30 180819.png=@Captura de pantalla 2024-07-30 180819,0
 Captura de pantalla 2024-07-31 195550.png=@Captura de pantalla 2024-07-31 195550,0
+Captura de pantalla 2024-08-11 211444.png=@Captura de pantalla 2024-08-11 211444,0
